// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AmountInput/> render() should render with currency symbol on left 1`] = `
<div
  className="container"
>
  <span
    className="leftLabel"
  >
    <ShopifyMoneySymbol
      currencyCode="USD"
      short={true}
    />
  </span>
  <Input
    className="input hasLeftLabel"
    id="amount"
    innerRef={[Function]}
    max={null}
    min={0}
    onChange={[MockFunction]}
    required={true}
    step={0.01}
    type="number"
    value="9.99"
  />
</div>
`;

exports[`<AmountInput/> render() should render with currency symbol on right 1`] = `
<div
  className="container"
>
  <Input
    className="input hasRightLabel"
    id="amount"
    innerRef={[Function]}
    max={null}
    min={0}
    onChange={[MockFunction]}
    required={true}
    step={0.01}
    type="number"
    value="9.99"
  />
  <span
    className="rightLabel"
  >
    <ShopifyMoneySymbol
      currencyCode="EUR"
      short={true}
    />
  </span>
</div>
`;

exports[`<AmountInput/> render() should render with percentage symbol on right 1`] = `
<div
  className="container"
>
  <Input
    className="input hasRightLabel"
    id="amount"
    innerRef={[Function]}
    max={100}
    min={0}
    onChange={[MockFunction]}
    required={true}
    step={0.01}
    type="number"
    value="25"
  />
  <span
    className="rightLabel"
  >
    %
  </span>
</div>
`;
